<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".EncryptActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="cursive"
        android:text="@string/add_new_encryption_text"
        android:textAlignment="center"
        android:textColor="#1459C0"
        android:textFontWeight="900"
        android:textSize="25sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userIDTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:hint="@string/textTitle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageContent"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="start"
            android:hint="@string/textContent"
            android:inputType="textMultiLine|text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/keyTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secretKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="6"
            android:inputType="textPassword"
            android:hint="@string/secretkey" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:text="@string/encrypt"
            android:textStyle="bold"
            android:background="@drawable/round_corner"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backtoDash"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/back"
            android:textStyle="bold"
            android:background="@drawable/back_corner"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>